[dyad] API-dokumentation och verktyg uppdaterade - wrote 5 file(s) + extra files edited outside of Dyad
